# SFCaS

./: .gitignore  CMakeLists.txt  Makefile  README.md
config/: dataserver.ini  nameserver.ini
include/: constant.h  debug.h  helper.h  index.h  needle.h  strkey.h
include/dfs/: nameserver.h  util.h
include/sindex/: helper.h  sindex.h  sindex_buffer.h  sindex_group.h  sindex_model.h  sindex_root.h  sindex_util.h
src/: combineFile.c  myread.c  myread.cpp  sfcas.cpp
src/aux/: index.cpp  needle.cpp
src/combine/: combineFile.cpp
src/dfs/: client.cc  dataserver.cc  master.cc  master.cpp  nameserver.cc
src/grpc/: file_access.grpc.pb.cc  file_access.grpc.pb.h  file_access.pb.cc  file_access.pb.h  health_check.grpc.pb.cc  health_check.grpc.pb.h  health_check.pb.cc  health_check.pb.h
src/proto/: file_access.proto  health_check.proto  sfcas.grpc.pb.cc  sfcas.grpc.pb.h  sfcas.pb.cc  sfcas.pb.h  sfcas.proto
src/sindex/: sindex.cpp  sindex_buffer.cpp  sindex_group.cpp  sindex_root.cpp  sindex_util.cpp
test/: combineFile.c  createFile.c  createFile.cpp  directCreateFile.c  directCreateFile.cpp  readFile.c  readFile.cpp
utils/: debug.cpp  needle.c
